--- a/inc/css/full.css
+++ b/inc/css/full.css
@@ -1,6 +1,6 @@
 body {
 	margin-top: 50px; /* 50px is the height of the navbar - change this if the navbarn height changes */
-	background-image:url(../images/background.png);
+	background-image:url(../img/background.png);
 	background-repeat: repeat-x;
 	background-position: center top;
 	font-family:Arial, Arial Black;
@@ -30,7 +30,7 @@ body {
 	/*border-color:#eee;*/
 	border-color:#000000;
 	background-color:#111;
-	background-image:url(../images/bg_server.png);
+	background-image:url(../img/bg_server.png);
 	background-repeat: repeat-x;
 	width:65%;
 	height:105px;
@@ -51,7 +51,7 @@ body {
 	/*border-color:#eee;*/
 	border-color:#000000;
 	background-color:#111;
-	background-image:url(../images/bg_server.png);
+	background-image:url(../img/bg_server.png);
 	background-repeat: repeat-x;
 	width:20%;
 	height:105px;
@@ -64,10 +64,10 @@ body {
 	border-width:1px;
 	border-color:#000000;
 	background-color:#111;
-	background-image:url(../images/bg_server.png);
+	background-image:url(../img/bg_server_mid.png);
 	background-repeat: repeat-x;
-	width:20%;
-	height:105px;
+	width:22%;
+	height:145px;
 }
 
 .bgstats
@@ -76,9 +76,9 @@ body {
 	border-width:1px;
 	border-color:#000000;
 	background-color:#111;
-	background-image:url(../images/bg_server_mid.png);
+	background-image:url(../img/bg_server_mid.png);
 	background-repeat: repeat-x;
-	width:20%;
+	width:22%;
 	height:125px;
 }
 
@@ -88,10 +88,10 @@ body {
 	border-width:1px;
 	border-color:#000000;
 	background-color:#111;
-	background-image:url(../images/bg_server_big.png);
+	background-image:url(../img/bg_server_big.png);
 	background-repeat: repeat-x;
 	width:60%;
-	height:795px;
+	height:815px;
 }
 
 
@@ -160,6 +160,44 @@ label
 
 .tg .tg-etkm
 {
-	font-size:100%;
-	font-family:"Arial Black", Gadget, sans-serif !important;;text-align:center
+	font-size:100%;font-family:"Arial Black", Gadget, sans-serif !important;;text-align:center
+}
+
+.ti  
+{
+	border-collapse:collapse;
+	border-spacing:0;
+}
+
+.ti td
+{
+	font-family:Arial, sans-serif;
+	font-size:14px;
+	padding:5px 5px;
+	border-style:solid;
+	border-width:0px;
+	overflow:hidden;
+	word-break:normal;
+}
+
+.ti th
+{
+	font-family:Arial, sans-serif;
+	font-size:14px;
+	font-weight:normal;
+	padding:5px 5px;
+	border-style:solid;
+	border-width:0px;
+	overflow:hidden;
+	word-break:normal;
+}
+
+.ti .ti-431l
+{
+	font-family:Arial, Helvetica, sans-serif !important;;text-align:center
+}
+
+.ti .ti-l77s
+{
+	font-weight:bold;font-family:Arial, Helvetica, sans-serif !important;;text-align:center
 }
